# scraper-kit

./: README.md  pyproject.toml  research.md  review.md
src/scraper_kit/: __init__.py  adapter.py
src/scraper_kit/browser/: __init__.py  chrome.py  cookies.py  session.py  stealth.py  ua.py
src/scraper_kit/engine/: __init__.py  errors.py  failure_bundle.py  health.py  hybrid.py  orchestrator.py  passive_tap.py
src/scraper_kit/filtering/: __init__.py  card_filter.py  counting.py  seen_set.py
src/scraper_kit/human/: __init__.py  behavior.py
src/scraper_kit/telemetry/: __init__.py  logger.py
tests/: test_adapter.py  test_browser.py  test_errors.py  test_failure_bundle.py  test_filtering.py  test_health.py  test_imports.py  test_passive_tap.py  test_telemetry.py
