[project]
name = "scraper-kit"
version = "0.1.0"
description = "Reusable web scraping framework with adapter-based multi-site support"
requires-python = ">=3.10"
dependencies = [
    "playwright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
